syntax = "proto3";

option csharp_namespace = "Calculator.Server";

package calculator;

service Calculator {
  rpc SendExpression (ExpressionMessage) returns (ResultMessage);
}

message ExpressionMessage {
  string expression = 1;
}

message ResultMessage {
  string result = 1;
}
